tests/ui/reborrow/coerce-shared-lifetime-mismatch.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/coerce-shared-lifetime-mismatch.rs:21:12
   |
LL |     let a = CustomMarker(PhantomData);
   |         - binding `a` declared here
LL |     method(a);
   |     -------^-
   |     |      |
   |     |      borrowed value does not live long enough
   |     argument requires that `a` is borrowed for `'static`
LL |
LL | }
   | - `a` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
